Bug 178755 - categories list does NOT sort alphabetically
Summary: categories list does NOT sort alphabetically
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-25 17:43 UTC by Wolfram R. Sieber
Modified: 2009-02-21 22:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfram R. Sieber 2008-12-25 17:43:19 UTC
Version:           3.5.9 (using 3.5.10, Debian Package 4:3.5.10.dfsg.1-0lenny1 (lenny/sid))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.26-1-686

Categories list dialog of the appointment dialog _tries_ to get sorted alphabetically.

However, lower-case letters get sorted after upper-case ones.
Comment 1 FiNeX 2008-12-25 21:09:50 UTC
Bug confirmed in KDE4 too. (tested using current trunk r901488)
Comment 2 Wolfram R. Sieber 2008-12-30 00:44:06 UTC
Not sure what exactly happened, by I was glad to see this fixed so soon -- and to have the update yet in my Debian packages, and here live on my box. But -- this bug got not closed, and the Debian package still reports the very version number I originally reported.

However, now the lower-case letters -- esp. labels with a heading lowercase letter -- get sorted to their respective places.

Not sure, what exactly happened here, _if_ this is in fact still the same version of korganizer as I  reported originally. Might be the dis-order happens under certain circumstances only. I'll keep an eye on this and may note here any clues I get.


However, one follow-up on this: Despite the originally mentioned dialog now orders the labels alphabetically, independently of case, in the global options dialog (Pull down menu > Options > Configure), in the colors section, where you can assign colors to certain categories, the category labels' order still gets messed up, lower-case going past upper-case ones. Shall I open a separate bug report for that or would you like to fix it together?
Comment 3 FiNeX 2008-12-30 11:15:45 UTC
Please open a separate bug repot.
Comment 4 Wolfram R. Sieber 2008-12-30 15:27:47 UTC
The follow-up is now reported as bug #179145.
Comment 5 Sergio Martins 2009-02-21 22:38:32 UTC
SVN commit 929684 by smartins:

Do case insensitive sorting instead of sensitive.
(using the QMap method provided in qtalgorithms.html#qSort)

BUG: 178755


 M  +8 -1      categoryhierarchyreader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=929684