Do case insensitive sorting instead of sensitive. (using the QMap method provided in qtalgorithms.html#qSort)

BUG: 178755

svn path=/trunk/KDE/kdepim/libkdepim/; revision=929684